--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -13,3 +13,8 @@
     @content;
   }
 }
+@mixin grid($columns, $gap) {
+  display: grid;
+  grid-template-columns: repeat($columns, 1fr);
+  gap: $gap;
+}
