--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,7 +3,9 @@
 @import "base/variables";
 @import "base/mixins";
 @import "base/global";
+@import "base/utilities";
 
 @import "layout/header";
 @import "layout/video";
 @import "layout/festival";
+@import "layout/lineup";
