Style scroll-smooth and nav-fix feat

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -19,6 +19,12 @@
       margin-bottom: 0;
     }
   }
+
+  &.fix {
+    position: fixed;
+    width: 100%;
+    box-shadow: 0 0.3rem 0.4rem #444;
+  }
 }
 
 .main-nav {
